--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "start": "vue-cli-service serve --mode production",
+    "render": "vue-cli-service build:prerender",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -59,7 +60,8 @@
       "no-unused-expressions": "off",
       "no-return-assign": "off",
       "prefer-destructuring": "off",
-      "no-console": "off"
+      "no-console": "off",
+      "no-underscore-dangle": "off"
     }
   },
   "browserslist": [
@@ -69,7 +71,7 @@
   ],
   "vuePlugins": {
     "service": [
-      "build.prerenderer.js"
+      "./build.prerender.js"
     ]
   }
 }
