--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
       "no-return-assign": "off",
       "prefer-destructuring": "off",
       "no-console": "off",
-      "no-underscore-dangle": "off"
+      "no-underscore-dangle": "off",
+      "no-plusplus": "off"
     }
   },
   "browserslist": [
