--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
       "prefer-destructuring": "off",
       "no-console": "off",
       "no-underscore-dangle": "off",
-      "no-plusplus": "off"
+      "no-plusplus": "off",
+      "object-curly-newline": "off",
+      "vue/no-unused-vars": "off"
     }
   },
   "browserslist": [
