--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
+    "build:client": "vue-cli-service build",
+    "build:server": "vue-cli-service build --no-clean --server",
     "start": "vue-cli-service serve --mode production",
     "render": "vue-cli-service build:prerender",
     "lint": "vue-cli-service lint"
@@ -16,10 +18,12 @@
     "@vuelidate/validators": "^2.0.0-alpha.21",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "maska": "^1.4.5",
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-server-renderer": "^2.6.14",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.36",
+    "rimraf": "^2.7.1",
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
