--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dollars-to-cents": "^1.0.3",
     "dotenv": "^8.2.0",
@@ -22,6 +23,8 @@
     "express-promise-router": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.4.11",
     "qs": "^6.9.4",
     "ramda": "^0.27.1",
